--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-parallax-tilt": "^1.7.301",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^3.4.17"
